# SECO-python

./: CITATION.cff  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
scripts/: run.ps1  run.sh
src/seco/methods/: antonym_riddle.py
src/seco/readers/: __init__.py  read_agglutlex.py  read_frequencies.py  read_kb_triples.py  read_liwc.py  read_morphobr.py  read_seco.py
