[project]
name = "seco"
version = "0.1.0"
description = "Reimplementation of the SECO riddle generation tool in Python."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=2.19.1",
    "matplotlib>=3.9.2",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pyphen>=0.17.0",
    "scikit-learn>=1.5.2",
    "stopwords>=1.0.1",
    "tabulate>=0.9.0",
    "torch==1.11.0+cu113",
    "transformers>=4.46.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
